--- a/index.css
+++ b/index.css
@@ -43,6 +43,9 @@ width:100%
    
 }
 
+
+
+
 .logo{
     width:232px;
     height:52px;
@@ -54,8 +57,13 @@ width:100%
     font-size: 1.5em;
 }
 .ınpt{
+    background-color:white;
     max-width:120px;
-    boder-radius:55px;
+   
+}
+.inputCover{
+ height:28px;
+    boder-radius:25px !important;
 }
 .loginText{
     font-weight: normal !important;
@@ -101,6 +109,8 @@ width:100%
     gap:15px;
   
 }
+
+
 .navbar-links2 a{
     margin-left:10px;
     fontsize: 12px;
@@ -112,7 +122,7 @@ width:100%
 }
 
 .bannerCover{
-    border:1px solid black;
+    
     display:flex;
     justify-content: center;
     align-items: center;
@@ -137,7 +147,7 @@ width:100%
     display:flex;
     justify-content:center;
     width:100%;
-    border:1px solid black;
+    
  
 }
 
@@ -170,7 +180,7 @@ width:100%
 .newsAreas {
     max-width: 732px;
     width: 100%;
-    display: flex;
+   
     flex-direction: column;
     justify-content: start;
   
@@ -313,6 +323,83 @@ width:100%
     height: auto; 
     margin-right:10px;
 }
+.slaytCover{
+    background-color: #fff;
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    position:relative;
+}
+.carousel-container {
+    display: flex;
+    justify-content: center;
+    max-height: 100vh; /* Ekran yüksekliğini aşınca küçülmesi için */
+  }
+  
+  .carousel-slide {
+    display: none;
+  }
+  
+  .imgSlayt {
+    max-width: 100%;
+    height: auto;
+  }
+
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+
+
+  color: white;
+  border: none;
+  padding: 1px;
+  cursor: pointer;
+}
+
+.prev-button {
+  left: 0%;
+}
+.previus{
+    width:30px;
+    height:30px
+}
+.next{
+    width:30px;
+    height:30px
+}
+
+
+.next-button {
+  right: 0;
+}
+.pagination {
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .pagination-dot.active {
+    background-color: red;
+  }
+
+ .pagination-container{
+    display-flex: none;
+ } 
+
+.pagination-dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.active {
+  background-color: #333;
+}
 
 
 
@@ -334,7 +421,15 @@ width:100%
 
 
 
-
+@media(max-width:976){
+    .navbar-links2 a{
+        display:flex;
+        justify-content:center;
+        align-items:center;
+    }
+    
+    
+    }
 
 
 @media(max-width:900px){
@@ -374,6 +469,7 @@ width:100%
 .navbar2{
     display:flex;
     justify-content:start;
+    align-items:start;
     
   
 }
@@ -384,13 +480,13 @@ width:100%
 }
 
 .navbar-links2{
-    display: none;
+    display: flex;
     flex-direction: column;
     position: absolute;
     top: 90px;
     
     background-color:#888888;
-    width:50%;
+    width:30%;
     
 } 
 .navbar-toggle2{
@@ -404,23 +500,119 @@ width:100%
 }
   
 }
+@media(max-width:800px){
+    .imagebanner2{
+        display:none;
+    }
+        .areas{
+            gap:10px;
+        }
+        .many{
+            display:flex;
+            flex-wrap:wrap;
+            font-size:8px;
+        }       
+        .imgMany{
+            margin-left:1px;
+            height:5px;
+            width:7px;
+        }
+        .red{
+            margin-left:1px;
+        }
+        .green{
+            margin-left:2px;
+        
+        }
+        .newss {
+            width: 100%;
+            gap:1px;
+            margin-top:5px;
+           display:flex;
+           flex-direction: column;
+            height: 16%;
+        }
+    
+     .box1{
+            width:100%;
+            height:50%;
+        }
+        
+        .imgbox1{
+            width:100%;
+            height:100%;
+        }
+        
+        .boximg{
+         
+            height:100%;
+        }
+        .divtext1{
+            width:50%;
+            
+        }
+        .boxtext{
+            width:45%;
+        }
+    
+        .box2{
+      
+            width:100%;
+            height:50%;
+        }
+        .previus{
+            width:20px;
+            height:20px
+        }
+        .next{
+            width:20px;
+            height:20px
+        }
+        
+        }
+    
+    
+        
+    @media(max-width:550px){
+        .areas{
+            gap:5px;
+        }
+       .many{
+      
+            font-weight: normal;
+            display: flex;
+            margin-top: 5px;
+            align-items:center;
+            font-size:8px;
+            
+        }
+    
+        .red{
+            font-size:5px;
+        }
+        .green{
+            font-size:5px;
+            margin-left:1px;
+        
+        }  
+    
+        .box2{
+            display:none;
+        }
+        .pagination-dot {
+            height: 5px;
+            width: 5px;
+        
+          }
+    }
 
-@media(max-width:976){
-.navbar-links2 a{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-
-
-}
 
 @media (max-width: 1082px) {
     .navbar-links2 {
       gap: 10px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: start;
     }
   
     .navbar-links2 a {
@@ -453,11 +645,19 @@ width:100%
     margin-left:3px;
 
 }
+.pagination-dot {
+    height: 8px;
+    width: 8px;
+
+  }
+  
 
 }
 
 @media(max-width:800px){
-
+.imagebanner2{
+    display:none;
+}
     .areas{
         gap:10px;
     }
@@ -514,7 +714,15 @@ width:100%
         width:100%;
         height:50%;
     }
-
+    .previus{
+        width:20px;
+        height:20px
+    }
+    .next{
+        width:20px;
+        height:20px
+    }
+    
     }
 
 
@@ -545,6 +753,11 @@ width:100%
     .box2{
         display:none;
     }
+    .pagination-dot {
+        height: 5px;
+        width: 5px;
+    
+      }
 }
 
 @media(max-width:350px){
@@ -568,10 +781,32 @@ width:100%
          margin-left:1px;
      
      }  
+     .pagination-dot {
+        height: 2px;
+        width: 2px;
+    
+      }
  }
  @media(max-width:500px){
     .newss{
         display:none;
     }
+    .areasCover{
+        height:50%;
+    }
+  
+.previus{
+    width:10px !important;
+    height:10px !important;
+
+}
+.next{
+    width:10px !important;
+    height:10px !important;
+}
 
  }
+
+
+
+
